--- a/collect_app/src/main/res/values/colors.xml
+++ b/collect_app/src/main/res/values/colors.xml
@@ -39,4 +39,7 @@ the License.
     <color name="mapPointCircle">#ffff0000</color>
     <color name="mapPointFill">#ffffffff</color>
     <color name="mapLine">#ffff0000</color>
+    <color name="cli_yellow">#ffb718</color>
+    <color name="cli_green">#006532</color>
+
 </resources>
