--- a/collect_app/src/main/res/xml/user_settings_access_preferences.xml
+++ b/collect_app/src/main/res/xml/user_settings_access_preferences.xml
@@ -66,10 +66,10 @@
         <CheckBoxPreference
             android:key="change_form_metadata"
             android:title="@string/form_metadata" />
-        <CheckBoxPreference
+        <!--<CheckBoxPreference
             android:key="analytics"
             android:title="@string/analytics"
             android:defaultValue="false"
-            />
+            /> -->
     </PreferenceCategory>
 </PreferenceScreen>
