--- a/collect_app/src/main/res/layout/main_menu.xml
+++ b/collect_app/src/main/res/layout/main_menu.xml
@@ -24,11 +24,13 @@
             style="@style/Widget.Collect.Toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:navigationIcon="@drawable/notes"
-            tools:title="Share CLI Support Tool"
+
+            tools:title="@string/app_name"
+
 
 
             />
+        <!--   app:navigationIcon="@drawable/notes" -->
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -80,7 +82,7 @@
                         android:layout_marginTop="@dimen/margin_extra_small"
                         tools:text="@string/enter_data"
                         android:textColor="#ffffff"
-                        android:background="#464646"/>
+                        android:background="#006532"/>
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/review_data"
@@ -90,7 +92,7 @@
                         android:layout_marginTop="@dimen/margin_extra_small"
                         tools:text="@string/review_data"
                         android:textColor="#ffffff"
-                        android:background="#464646"/>
+                        android:background="#006532"/>
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/send_data"
@@ -100,7 +102,7 @@
                         android:layout_marginTop="@dimen/margin_extra_small"
                         tools:text="@string/send_data"
                         android:textColor="#ffffff"
-                        android:background="#464646"/>
+                        android:background="#006532"/>
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/view_sent_forms"
@@ -110,7 +112,7 @@
                         android:layout_marginTop="@dimen/margin_extra_small"
                         android:text="@string/view_sent_forms"
                         android:textColor="#ffffff"
-                        android:background="#464646"/>
+                        android:background="#006532"/>
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/get_forms"
@@ -120,7 +122,7 @@
                         android:layout_marginTop="@dimen/margin_extra_small"
                         tools:text="@string/get_forms"
                         android:textColor="#ffffff"
-                        android:background="#464646"/>
+                        android:background="#006532"/>
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/manage_forms"
@@ -130,7 +132,7 @@
                         android:layout_marginTop="@dimen/margin_extra_small"
                         tools:text="@string/manage_files"
                         android:textColor="#ffffff"
-                        android:background="#464646"/>
+                        android:background="#006532"/>
 
                     <TextView
                         android:id="@+id/version_sha"
