--- a/collect_app/src/main/res/xml/identity_preferences.xml
+++ b/collect_app/src/main/res/xml/identity_preferences.xml
@@ -7,12 +7,12 @@
         android:key="form_metadata"
         android:summary="@string/form_metadata_summary"
         android:title="@string/form_metadata" />
-    <PreferenceCategory
+    <!--<PreferenceCategory
         android:key="@string/analytics_preferences"
         android:title="@string/analytics_preferences">
         <CheckBoxPreference
             android:key="analytics"
             android:summary="@string/analytics_summary"
             android:title="@string/analytics" />
-    </PreferenceCategory>
+    </PreferenceCategory> -->
 </PreferenceScreen>
